send confirmation emails

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 ADMIN_USER=admin
 ADMIN_PASSWORD=password
+SMTP_USER_NAME=username
+SMTP_PASSWORD=password
+SMTP_DOMAIN=example.com
+SMTP_ADDRESS=smtp.sendgrid.net
