--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle install && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && yarn install --check-files && bundle install && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/railsapp
     ports:
